[project]
name = "sneakydog_playwright_demo"
version = "2024.6.6"
authors = [{ name = "dfz", email = "sneakydog@yeah.net" }]
description = "sneakydog_playwright_demo"
requires-python = ">=3.10"
dependencies = [
    "playwright",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[project.scripts]
login = 'sneakydog_playwright_demo:_login'